--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   riverpod_annotation: ^2.3.5
   dotted_border: ^2.1.0
   shimmer: ^3.0.0
+  animated_text_kit: ^4.2.2
 
 dev_dependencies:
   flutter_test:
